费凯鑫12周作业

--- a/Group1/feikaixin/.project
+++ b/Group1/feikaixin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>前端作业</name>
+	<name>12周作业</name>
 	<comment>Create By HBuilder</comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1494400568365</id>
+			<id>1494826819427</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
